--- a/src/main/resources/templates/todoList.html
+++ b/src/main/resources/templates/todoList.html
@@ -49,6 +49,7 @@
                             <input type="hidden" id="id">
                             <label for="nameWork">Name work:</label>
                             <input type="text" class="form-control"  placeholder="Enter name work" id="nameWork" name="nameBlog" required>
+                            <small id="err-name" style="color: red"></small>
                         </div>
                         <div class="form-group">
                             <label for="startingDate">Starting date</label>
@@ -81,7 +82,7 @@
         <thead class="thead-dark">
         <tr>
             <td>Stt</td>
-            <td>Name</td>
+            <td>Name work</td>
             <td>Starting date</td>
             <td>Ending date</td>
             <td>Status</td>
